--- a/database/ol7_122/Dockerfile
+++ b/database/ol7_122/Dockerfile
@@ -17,6 +17,9 @@
 # Persistent storage.
 # docker run -dit --name ol7_122_con -p 1521:1521 -p 5500:5500 -v /home/docker_user/volumes/ol7_122_con_u02/:/u02 ol7_122:latest
 #
+# Persistent storage and part of Docker network called "my_network".
+# docker run -dit --name ol7_122_con -p 1521:1521 -p 5500:5500 --network=my_network -v /home/docker_user/volumes/ol7_122_con_u02/:/u02 ol7_122:latest
+#
 # docker exec -it ol7_122_con bash
 #
 # docker stop --time=30 ol7_122_con
