Replace "yum clean all" with "rm -Rf /var/cache/yum".

--- a/database/ol7_122/Dockerfile
+++ b/database/ol7_122/Dockerfile
@@ -80,7 +80,7 @@ RUN groupadd -g 500 dba                                                     && \
     yum -y install unzip tar gzip                                           && \
     yum -y update                                                           && \
     yum -y install oracle-rdbms-server-12cR1-preinstall                     && \
-    yum clean all                                                           && \
+    rm -Rf /var/cache/yum                                                   && \
     mkdir -p ${ORACLE_HOME}                                                 && \
     mkdir -p /u02/oradata                                                   && \
     chown -R oracle.oinstall /u01 /u02                                      && \
