Add --shm-size flag to example run commands in comments.

--- a/database/ol7_121/Dockerfile
+++ b/database/ol7_121/Dockerfile
@@ -12,13 +12,13 @@
 # docker build -t ol7_121:latest .
 #
 # Non-persistent storage.
-# docker run -dit --name ol7_121_con -p 1521:1521 -p 5500:5500 ol7_121:latest
+# docker run -dit --name ol7_121_con -p 1521:1521 -p 5500:5500 --shm-size="1G" ol7_121:latest
 #
 # Persistent storage.
-# docker run -dit --name ol7_121_con -p 1521:1521 -p 5500:5500 -v /home/docker_user/volumes/ol7_121_con_u02/:/u02 ol7_121:latest
+# docker run -dit --name ol7_121_con -p 1521:1521 -p 5500:5500 --shm-size="1G" -v /home/docker_user/volumes/ol7_121_con_u02/:/u02 ol7_121:latest
 #
 # Persistent storage and part of Docker network called "my_network".
-# docker run -dit --name ol7_121_con -p 1521:1521 -p 5500:5500 --network=my_network -v /home/docker_user/volumes/ol7_121_con_u02/:/u02 ol7_121:latest
+# docker run -dit --name ol7_121_con -p 1521:1521 -p 5500:5500 --shm-size="1G" --network=my_network -v /home/docker_user/volumes/ol7_121_con_u02/:/u02 ol7_121:latest
 #
 # docker exec -it ol7_121_con bash
 #
