--- a/database/staged/ol7_122_stage1/Dockerfile
+++ b/database/staged/ol7_122_stage1/Dockerfile
@@ -28,8 +28,8 @@ ENV ORACLE_BASE=/u01/app/oracle                                                \
     SOFTWARE_DIR=/u01/software                                                 \
     DB_SOFTWARE="linuxx64_12201_database.zip"                                  \
     ORACLE_PASSWORD="oracle"                                                   \
-    SCRIPTS_DIR="/u01/scripts"                                                 \
-    ORAENV_ASK="NO"
+    SCRIPTS_DIR=/u01/scripts                                                   \
+    ORAENV_ASK=NO
 
 # ------------------------------------------------------------------------------
 # Get all the files for the build.
