Use preupgrade.jar from MOS 884522.1.

--- a/database/ol7_121_122/Dockerfile
+++ b/database/ol7_121_122/Dockerfile
@@ -3,13 +3,14 @@
 # Based on the following:
 #   - Oracle Linux 7 - Slim
 #   - Oracle Database
-#       http://www.oracle.com/technetwork/database/enterprise-edition/downloads/oracle12c-windows-3633015.html
-#   - Oracle Application Express (APEX)
-#       http://www.oracle.com/technetwork/developer-tools/apex/downloads/index.html
+#       http://www.oracle.com/technetwork/database/enterprise-edition/downloads/index.html
+#   - The "preupgrade.jar" file is downloaded from MOS 884522.1
+#       https://support.oracle.com/epmos/faces/DocContentDisplay?id=884522.1
 #
 # Example build and run.
 #
 # docker build -t ol7_121_122:latest .
+# docker build --squash -t ol7_121_122:latest .
 #
 # Persistent storage.
 # docker run -dit --name ol7_121_122_con -p 1521:1521 -p 5500:5500 --shm-size="1G" -v /home/docker_user/volumes/ol7_121_con_u02/:/u02 ol7_121_122:latest
@@ -40,6 +41,7 @@ ENV ORACLE_BASE=/u01/app/oracle                                                \
     ORA_INVENTORY=/u01/app/oraInventory                                        \
     SOFTWARE_DIR=/u01/software                                                 \
     DB_SOFTWARE="linuxx64_12201_database.zip"                                  \
+    PREUPGRADE_SOFTWARE="preupgrade_12201_cbuild_011_lf.zip"                   \
     ORACLE_PASSWORD="oracle"                                                   \
     SCRIPTS_DIR=/u01/scripts                                                   \
     ORAENV_ASK=NO
@@ -101,9 +103,11 @@ RUN ${SOFTWARE_DIR}/database/runInstaller -ignoreSysPrereqs -ignorePrereq      \
     SECURITY_UPDATES_VIA_MYORACLESUPPORT=false                                 \
     DECLINE_SECURITY_UPDATES=true
 
-
-# Remove source software
-RUN rm -Rf ${SOFTWARE_DIR}/database
+# Remove source software and put the latest "preupgrade.jar" file in place.
+RUN rm -Rf ${SOFTWARE_DIR}/database                                         && \
+    cd ${ORACLE_HOME_2}/rdbms/admin/                                        && \
+    mv ${SOFTWARE_DIR}/${PREUPGRADE_SOFTWARE} ./${PREUPGRADE_SOFTWARE}      && \
+    unzip -o ${PREUPGRADE_SOFTWARE}
 
 # Run the root scripts
 USER root
