--- a/compose/ol7_122_ords/docker-compose.yml
+++ b/compose/ol7_122_ords/docker-compose.yml
@@ -18,10 +18,14 @@ services:
   ordsservice:
     build:
       context: ../../ords/ol7_ords/
+      #context: ../../ords/ol7_t8_j8_ords18/
+      #context: ../../ords/ol7_t9_j9_ords18/
       dockerfile: Dockerfile
     depends_on:
       - dbservice
     image: ol7_ords:latest
+    #image: ol7_t8_j8_ords18:latest
+    #image: ol7_t9_j9_ords18:latest
     environment:
       - DB_HOSTNAME=dbservice
       - DB_PORT=1521
