Update to use APEX 18.1, Tomcat 9.0.8 and SQLcl 18.1.1.

--- a/ords/ol7_ords/Dockerfile
+++ b/ords/ol7_ords/Dockerfile
@@ -41,10 +41,10 @@ LABEL maintainer="tim@oracle-base.com"
 # ------------------------------------------------------------------------------
 # Define fixed (build time) environment variables.
 ENV JAVA_SOFTWARE="jdk-10.0.1_linux-x64_bin.tar.gz"                            \
-    TOMCAT_SOFTWARE="apache-tomcat-9.0.7.tar.gz"                               \
+    TOMCAT_SOFTWARE="apache-tomcat-9.0.8.tar.gz"                               \
     ORDS_SOFTWARE="ords.18.1.1.95.1251.zip"                                    \
-    APEX_SOFTWARE="apex_5.1.4_en.zip"                                          \
-    SQLCL_SOFTWARE="sqlcl-18.1.0.zip"                                          \
+    APEX_SOFTWARE="apex_18.1_en.zip"                                           \ 
+    SQLCL_SOFTWARE="sqlcl-18.1.1.zip"                                          \
     SOFTWARE_DIR="/u01/software"                                               \
     SCRIPTS_DIR="/u01/scripts"                                                 \
     KEYSTORE_DIR="/u01/keystore"                                               \
@@ -99,7 +99,7 @@ RUN yum -y install unzip tar gzip                                           && \
     cd /u01                                                                 && \
     unzip ${SOFTWARE_DIR}/${SQLCL_SOFTWARE}                                 && \
     rm -f ${SOFTWARE_DIR}/${SQLCL_SOFTWARE}                                 && \
-    mv /u01/*sqlcl* /u01/sqlcl                                              && \
+    #mv /u01/*sqlcl* /u01/sqlcl                                             && \
     cd ${SOFTWARE_DIR}                                                      && \
     unzip ${SOFTWARE_DIR}/${APEX_SOFTWARE}                                  && \
     rm -f ${SOFTWARE_DIR}/${APEX_SOFTWARE}                                  && \
