Add INSTALL_APEX flag with a default value of true. If set to false APEX is not installed into the database. The APEX software is still needed for the build.

--- a/database/ol7_183/Dockerfile
+++ b/database/ol7_183/Dockerfile
@@ -60,6 +60,7 @@ ENV ORACLE_SID=cdb1                                                            \
     SYS_PASSWORD="SysPassword1"                                                \
     PDB_NAME="pdb1"                                                            \
     PDB_PASSWORD="PdbPassword1"                                                \
+    INSTALL_APEX="true"                                                        \
     APEX_EMAIL="me@example.com"                                                \
     APEX_PASSWORD="ApexPassword1"
 
