update Tomcat version. Split CATALINA_HOME and CATALINA_BASE. Support CATALINA_BASE as a persistent volume.

--- a/compose/ol7_183_ords/docker-compose.yml
+++ b/compose/ol7_183_ords/docker-compose.yml
@@ -22,6 +22,9 @@ services:
     depends_on:
       - dbservice
     image: ol7_ords:latest
+    # Comment out volume if you don't care about a persistent CATALINA_BASE.
+    volumes:
+      - /home/docker_user/volumes/ol7_183_ords_tomcat:/u01/config/instance1
     environment:
       - DB_HOSTNAME=dbservice
       - DB_PORT=1521
@@ -44,8 +47,10 @@ services:
       context: ../../database/ol7_183/
       dockerfile: Dockerfile
     image: ol7_183:latest
+    # Use persistent volume of your choice.
     volumes:
-      - db-data:/u02
+      #- db-data:/u02
+      - /home/docker_user/volumes/ol7_183_ords_db:/u02
     environment:
       - SYS_PASSWORD=SysPassword1
       - PDB_PASSWORD=PdbPassword1
@@ -54,6 +59,6 @@ services:
     ports:
       - "1521:1521"
 
-volumes:
-  db-data:
-
+#volumes:
+#  db-data:
+  
